ncc/testsuite/negative/bug-1155.n
class A {
  this () {
    try { // E: uninitialized ``this'' on entering a try block
    }
    finally {
    }
    base ();
  }
}
